--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@ this is updatedone
 !@#$%^&
 Jenkins is a wonderful tool
 DevOps course has lot of scope in IT sector.
+Jenkins is used for automation purposes.
