--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@ this is updatedone
 Jenkins is a wonderful tool
 DevOps course has lot of scope in IT sector.
 Jenkins is used for automation purposes.
+Automation deployment is called CD.
